--- a/styles/shows.css
+++ b/styles/shows.css
@@ -207,6 +207,34 @@ html, body {
 }
 
 @media screen and (min-width: 320px) {
+  .shows {
+    padding: 1rem;
+  }
+  .shows-date {
+    color: #AFAFAF;
+  }
+  .shows-exactDate {
+    font-weight: bold;
+  }
+  .shows-location {
+    color: #AFAFAF;
+  }
+  .shows-btn {
+    width: 100%;
+    height: 2.25rem;
+    border-radius: 0.25rem;
+    background-color: #323232;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .shows-lines {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 320px) {
   .footer {
     padding-right: 1rem;
     padding-left: 1rem;
