--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -213,6 +213,41 @@ html, body {
         height: auto;
     }
 } 
+
+.shows {
+    @include mobile{
+        padding: 1rem;
+
+        &-date{
+            color: $silver;
+        }
+        &-exactDate{
+            font-weight: bold;
+        }
+        &-location{
+            color: $silver;
+        }
+        &-btn{
+            width: 100%;
+            height: 2.25rem;
+            border-radius: 0.25rem;
+            background-color: $bandsite-Black;
+            color: $white;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &-lines {
+            width: 100%;
+        }
+    }
+}
+
+
+
+
+
 .footer {
     @include mobile {
     padding-right: 1rem;
