--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -241,6 +241,9 @@ html, body {
         &-lines {
             width: 100%;
         }
+        &-venue{
+            color: $silver;;
+        }
     }
 }
 
