--- a/styles/shows.css
+++ b/styles/shows.css
@@ -168,13 +168,23 @@ html, body {
 
 .hero {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 @media screen and (min-width: 320px) {
   .hero__title {
     color: #FFFFFF;
     position: absolute;
     padding-left: 1rem;
+  }
+  .hero__container {
+    display: flex;
+    align-items: flex-end;
+  }
+  .hero__music {
+    position: absolute;
+  }
+  .hero__soundcloud {
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
