--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -194,10 +194,11 @@ html, body {
         }
         &__music{
             position: absolute;
-            
+            padding: 1rem;
         }
         &__soundcloud{
             width: 100%;
+            height: 7rem;
         }
     }
     @include tablet {
@@ -233,12 +234,16 @@ html, body {
 
         &-date{
             color: $silver;
+            padding-top: 1rem;
         }
         &-exactDate{
             font-weight: bold;
         }
         &-location{
             color: $silver;
+        }
+        &-exactLocation{
+            padding-bottom: 1rem;
         }
         &-btn{
             width: 100%;
@@ -250,9 +255,15 @@ html, body {
             display: flex;
             justify-content: center;
             align-items: center;
+            border: none;
+            padding: 1.25rem;
+   
         }
         &-lines {
-            width: 100%;
+            width: 110%;
+            margin-top: 1rem;
+            background-color: $silver;
+            margin-left: -1rem;
         }
         &-venue{
             color: $silver;;
