--- a/styles/shows.css
+++ b/styles/shows.css
@@ -187,6 +187,7 @@ html, body {
   .hero__soundcloud {
     width: 100%;
     height: 7rem;
+    border: none;
   }
 }
 @media screen and (min-width: 768px) {
@@ -197,6 +198,13 @@ html, body {
   .hero__title {
     padding-left: 2.25rem;
     margin: 0;
+  }
+  .hero__music {
+    padding-left: 2.25rem;
+  }
+  .hero__soundcloud {
+    border: none;
+    width: 150%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -255,6 +263,22 @@ html, body {
   }
   .shows-venue {
     color: #AFAFAF;
+  }
+}
+@media screen and (min-width: 768px) {
+  .shows-container {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .shows-containerDate {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin: 0 auto;
+    transform: translateX(-6rem);
+  }
+  .shows-btn {
+    width: 20%;
   }
 }
 
