--- a/styles/shows.css
+++ b/styles/shows.css
@@ -175,6 +175,13 @@ html, body {
     color: #FFFFFF;
     position: absolute;
     padding-left: 1rem;
+    transform: translateY(8rem);
+  }
+  .hero__subTitle {
+    color: #FFFFFF;
+    position: absolute;
+    padding-left: 2.5rem;
+    font-size: 2.5rem;
   }
   .hero__container {
     display: flex;
@@ -186,8 +193,9 @@ html, body {
   }
   .hero__soundcloud {
     width: 100%;
-    height: 7rem;
+    height: 12rem;
     border: none;
+    transform: translateY(-5rem);
   }
 }
 @media screen and (min-width: 768px) {
@@ -276,9 +284,15 @@ html, body {
     align-items: flex-end;
     margin: 0 auto;
     transform: translateX(-6rem);
+    display: none;
   }
   .shows-btn {
     width: 20%;
+    font-weight: bold;
+  }
+  .shows-lines {
+    width: 100%;
+    background-color: #AFAFAF;
   }
 }
 
