--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -187,7 +187,17 @@ html, body {
             color: $white;
             position: absolute;
             padding-left: 1rem;
+            transform: translateY(8rem);
+
         }
+        &__subTitle{
+            color: $white;
+            position: absolute;
+            padding-left: 2.5rem;
+            font-size: 2.5rem;
+    
+        }
+
         &__container{
             display: flex;
             align-items: flex-end;
@@ -198,8 +208,9 @@ html, body {
         }
         &__soundcloud{
             width: 100%;
-            height: 7rem;
+            height: 12rem;
             border: none;
+            transform: translateY(-5rem);
         }
     }
     @include tablet {
@@ -291,9 +302,15 @@ html, body {
             align-items: flex-end;
             margin: 0 auto;
             transform: translateX(-6rem);
+            display: none;
         }
         &-btn{
             width: 20%;
+            font-weight: bold;
+        }
+        &-lines {
+            width: 100%;
+            background-color: $silver;
         }
     }
 }
