--- a/styles/shows.css
+++ b/styles/shows.css
@@ -192,10 +192,8 @@ html, body {
     padding: 1rem;
   }
   .hero__soundcloud {
-    width: 100%;
-    height: 12rem;
     border: none;
-    transform: translateY(-5rem);
+    width: 150%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -213,6 +211,12 @@ html, body {
   .hero__soundcloud {
     border: none;
     width: 150%;
+  }
+  .hero__soundcloud {
+    width: 100%;
+    height: 12rem;
+    border: none;
+    transform: translateY(-5rem);
   }
 }
 @media screen and (min-width: 1280px) {
