--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -207,10 +207,8 @@ html, body {
             padding: 1rem;
         }
         &__soundcloud{
-            width: 100%;
-            height: 12rem;
             border: none;
-            transform: translateY(-5rem);
+            width: 150%;
         }
     }
     @include tablet {
@@ -227,6 +225,12 @@ html, body {
         &__soundcloud{
             border: none;
             width: 150%;
+        }
+        &__soundcloud{
+            width: 100%;
+            height: 12rem;
+            border: none;
+            transform: translateY(-5rem);
         }
     }
     @include desktop {
