--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -236,6 +236,7 @@ html, body {
     @include desktop {
         font-size: 3.75rem;
         line-height: 4.25rem;
+        align-items: center;
         &__title{
         margin: 0;
         }
@@ -250,6 +251,21 @@ html, body {
         width: 100%;
         height: auto;
     }
+    &__soundcloud{
+        width: 60%;
+        height: 12rem;
+        border: none;
+        transform: translateY(-35rem);
+        padding-left: 55rem;
+    }
+    &__subTitle{
+        padding-left: 10rem;
+    }
+    &__title{
+        padding-left: 10rem;
+        margin: 0;
+        line-height: 5rem;
+        }
 } 
 
 .shows {
@@ -316,6 +332,34 @@ html, body {
             width: 100%;
             background-color: $silver;
         }
+    }
+    @include desktop{
+        &-title{
+            font-size: 60px;
+            padding-left: 5rem;
+        }
+        &-container{
+            display: flex;
+            justify-content: space-evenly;
+            padding-left: 15rem;
+         }
+         &-containerDate{
+             display: flex;
+             justify-content: space-evenly;
+             align-items: flex-end;
+             margin: 0 auto;
+             transform: translateX(-6rem);
+             display: none;
+         }
+         &-btn{
+             width: 20%;
+             font-weight: bold;
+         }
+         &-lines {
+             width: 70%;
+             margin-left: 25rem;
+             background-color: $silver;
+         }
     }
 }
 
