--- a/styles/shows.css
+++ b/styles/shows.css
@@ -169,19 +169,42 @@ html, body {
 .hero {
   display: flex;
   align-items: flex-start;
+  position: relative;
 }
 @media screen and (min-width: 320px) {
   .hero__title {
     color: #FFFFFF;
     position: absolute;
     padding-left: 1rem;
-    transform: translateY(8rem);
+    padding-top: 3rem;
+    z-index: 1;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    margin: 0 auto;
   }
   .hero__subTitle {
     color: #FFFFFF;
     position: absolute;
-    padding-left: 2.5rem;
-    font-size: 2.5rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    z-index: 1;
+  }
+  .hero__img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .hero-img-overlay {
+    position: absolute;
+    background: #323232;
+    width: 100%;
+    height: 100%;
+    transition: none;
+    opacity: 50%;
   }
   .hero__container {
     display: flex;
@@ -189,11 +212,15 @@ html, body {
   }
   .hero__music {
     position: absolute;
-    padding: 1rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
   }
   .hero__soundcloud {
     border: none;
-    width: 150%;
+    width: 100%;
+    height: 6rem;
+    padding-bottom: 1rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -235,26 +262,9 @@ html, body {
     padding-left: 10rem;
   }
 }
-.hero__title {
-  color: #FFFFFF;
-  position: absolute;
-  font-weight: 400;
-}
 .hero__img {
   width: 100%;
   height: auto;
-}
-.hero__soundcloud {
-  width: 60%;
-  height: 12rem;
-  border: none;
-  transform: translateY(-35rem);
-  padding-left: 55rem;
-}
-.hero__title {
-  padding-left: 10rem;
-  margin: 0;
-  line-height: 5rem;
 }
 
 @media screen and (min-width: 320px) {
