--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -180,6 +180,7 @@ html, body {
 .hero {
     display: flex;
     align-items: flex-start;
+    position: relative;
     
 
     @include mobile {
@@ -187,28 +188,54 @@ html, body {
             color: $white;
             position: absolute;
             padding-left: 1rem;
-            transform: translateY(8rem);
+            padding-top: 3rem;
+            z-index: 1;
 
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 700;
+            margin: 0 auto;
         }
         &__subTitle{
             color: $white;
             position: absolute;
-            padding-left: 2.5rem;
-            font-size: 2.5rem;
-    
-        }
+            padding-left: 1rem;
+            padding-top: 1rem;
 
+            font-size: 0.875rem;
+            line-height: 1.375rem;
+            font-weight: 600;
+            z-index: 1;
+        }
+        &__img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+        &-img-overlay{
+            position: absolute;
+            background: $bandsite-Black;
+            width: 100%;
+            height: 100%;
+            transition: none;
+            opacity: 50%;
+        }
         &__container{
             display: flex;
             align-items: flex-end;
         }
         &__music{
             position: absolute;
-            padding: 1rem;
+            padding-right: 1rem;
+            padding-left: 1rem;
+            padding-bottom: 1rem;
+          
         }
         &__soundcloud{
             border: none;
-            width: 150%;
+            width: 100%;
+            height: 6rem;
+            padding-bottom: 1rem;
         }
        
     }
@@ -248,27 +275,10 @@ html, body {
             padding-left: 10rem;
         }
     }
-    &__title {
-    color: $white;
-    position: absolute;
-    font-weight: 400; 
-    }
   
     &__img {
         width: 100%;
         height: auto;
-    }
-    &__soundcloud{
-        width: 60%;
-        height: 12rem;
-        border: none;
-        transform: translateY(-35rem);
-        padding-left: 55rem;
-    }
-    &__title{
-        padding-left: 10rem;
-        margin: 0;
-        line-height: 5rem;
     }
 } 
 
