--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -38,10 +38,19 @@ html, body {
 }
 
 .header {
-    background: $bandsite-Black;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    @include mobile{
+        background: $bandsite-Black;
+        flex-direction: column;
+        position: relative;
+        &__logo {
+            background-image: url('../assets/Logo/Logo-bandsite.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            align-items: center;
+            max-height: 20px;
+            padding: 1.5rem;
+        }
+    }
    
     @include tablet {
         flex-direction: row;
@@ -49,25 +58,21 @@ html, body {
         align-items: center;
         padding: 2.25rem;
         &__logo{
-            width: 20%;
+            width: 100%;
+            background-position: left;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
         }
+        
+
     }
-    @include desktop() {
+    @include desktop {
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
         padding: 2.25rem;
     }
-    &__logo {
-        background-image: url('../assets/Logo/Logo-bandsite.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        align-items: center;
-        max-height: 20px;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin: 0.5rem;
-    }
+
 }
 
 .nav {
@@ -81,16 +86,17 @@ html, body {
             border-bottom: -1.1875rem solid ($white);
             color: $white;
         }
-    }
-        &__link {
-        text-decoration: none;
-        color: $silver;
-        transition: background-color 0.25s;
-        display: flex;
-        width: 50%;
-        justify-content: space-evenly;
-        transition: all 0.5s;
     
+        &__link {
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+        }
+
         @include tablet {
             font-size: 1.5rem;
           
@@ -98,7 +104,7 @@ html, body {
         &:hover{
             color: $white;
         }
-    }
+    
         &__button {
             padding: 0.625rem;
             text-decoration: none;
@@ -109,9 +115,12 @@ html, body {
             justify-content: space-evenly;
             transition: all 0.5s;
             background-color: $bandsite-Black;
-           
+            border: none;
+            
             @include tablet {
-                font-size: 1.5rem;
+                font-size: 0.875rem;
+                line-height: 2rem;
+                font-weight: 600;
             
             }
             &:hover{
@@ -120,41 +129,46 @@ html, body {
                 color: $white;
                
             } 
+        }
+        
     }
+
  
     @include tablet {
-        justify-content: flex-end;
-        position:absolute;
-        top: 0;
-        height: 100%;
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        margin-left: 2.25rem;
+            justify-content: flex-end;
+            position:absolute;
+            top: 0;
+            height: 100%;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            transform: translateX(10rem);
        
         &:hover{
             border-bottom: -1.1875rem solid ($white);
             color: $white;
         }
-    }
+    
         &__link {
-        text-decoration: none;
-        color: $silver;
-        transition: background-color 0.25s;
-        display: flex;
-        width: 50%;
-        justify-content: space-evenly;
-        transition: all 0.5s;
-        
-        @include tablet {
-            font-size: 1.5rem;
+            text-decoration: none;
+            color: $silver;
+            transition: background-color 0.25s;
+            display: flex;
+            width: 50%;
+            justify-content: space-evenly;
+            transition: all 0.5s;
+
+            font-size: 0.75rem;
+            font-weight: 700;
+            line-height: 1.25rem;
         }
+
         &:hover{
             color: $white;
         }
-    }
+    
         &__button {
-            padding: 0.625rem;
+            padding: 2rem;
             text-decoration: none;
             color: $silver;
             transition: background-color 0.25s;
@@ -165,18 +179,22 @@ html, body {
             background-color: $bandsite-Black;
             align-items: center;
             border: none;
-        } 
-            @include tablet {
-                font-size: 1.5rem;
-            }
+        
             &:hover{
                 background-color: darken($bandsite-DarkBlack, 5%);
                 color: $white;
             }
+        }
+        
+
+    }
+
+
     @include desktop {
        margin-left: 2.25rem;
     }
 } 
+
 
 .hero {
     display: flex;
