--- a/styles/shows.css
+++ b/styles/shows.css
@@ -195,7 +195,7 @@ html, body {
     padding-top: 1rem;
     font-size: 0.875rem;
     line-height: 1.375rem;
-    font-weight: 600;
+    font-weight: 400;
     z-index: 1;
   }
   .hero__img {
@@ -298,11 +298,10 @@ html, body {
     font-weight: 400;
   }
   .shows-exactLocation {
-    padding-bottom: 1rem;
     margin-top: 0;
     font-size: 0.875rem;
     line-height: 1.375rem;
-    font-weight: 600;
+    font-weight: 400;
   }
   .shows-btn {
     width: 100%;
@@ -315,6 +314,9 @@ html, body {
     align-items: center;
     border: none;
     padding: 1.25rem;
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 600;
   }
   .shows-lines {
     width: 110%;
@@ -336,7 +338,7 @@ html, body {
     margin-top: 0;
     font-size: 0.875rem;
     line-height: 1.375rem;
-    font-weight: 600;
+    font-weight: 400;
   }
   .shows-containerDate {
     display: flex;
