--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -261,27 +261,52 @@ html, body {
     @include tablet {
         font-size: 3.75rem;
         line-height: 4.25rem;
+        display: block;
+    
+
+        &__img {
+            width: 100%;
+            height: auto;
+            display: block;
+
+        }
 
         &__title{
         padding-left: 2.25rem;
         margin: 0;
+        transform: translateY(8rem);
+       
+        
+        
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        font-weight: 700;
         }
         &__music{
         padding-left: 2.25rem;
+        
+        
         }
         &__soundcloud{
             border: none;
-            width: 150%;
+            width: 130%;
+            height: 100%;
         }
         &__soundcloud{
-            width: 100%;
-            height: 12rem;
+            
             border: none;
             transform: translateY(-5rem);
         }
         &__subTitle{
-            padding-left: 10rem;
+            padding-left: 2.25rem;
+            transform: translateY(8rem);
+            margin: 0;
+
+            font-size: 1.5rem;
+            line-height: 2rem;
+            font-weight: 600;
         }
+
     }
     @include desktop {
         font-size: 3.75rem;
@@ -295,20 +320,16 @@ html, body {
         }
     }
   
-    &__img {
-        width: 100%;
-        height: auto;
-    }
+   
 } 
 
 .shows {
     @include mobile{
         padding: 1rem;
-
+        padding-top: 0;
         &-date{
             color: $silver;
             padding-top: 1rem;
-            
             font-size: 0.8125rem;
             line-height: 1.125rem;
             font-weight: 400;
@@ -340,7 +361,6 @@ html, body {
             border-radius: 0.25rem;
             background-color: $bandsite-Black;
             color: $white;
-
             display: flex;
             justify-content: center;
             align-items: center;
@@ -376,31 +396,90 @@ html, body {
             display: flex;
             flex-direction: column;
         }
-    
-        
+        &-tablet__row{
+            display: none;
+        }
+        &-title{
+            padding-top: 1.5rem;
+            padding-bottom: 1rem;
+            margin: 0;
+        }
     }
     @include tablet{
+        padding: 2.25rem;
+        padding-top: 0;
 
+        &-title{
+            font-size: 2.25rem;
+            line-height: 2.75rem;
+            font-weight: 700;
+            margin: 0;
+            padding-bottom: 2.25rem;
+            padding-top: 3rem;
+        }
        &-container{
            display: flex;
            justify-content: space-evenly;
-   
         }
         &-containerDate{
             display: flex;
-            justify-content: space-evenly;
-            align-items: flex-end;
             margin: 0 auto;
-            transform: translateX(-6rem);
-            display: none;
+            align-items: baseline;
+            flex-direction: row;
         }
         &-btn{
-            width: 20%;
+            width: 9.375rem;
             font-weight: bold;
+            height: 2.5rem;
         }
         &-lines {
-            width: 100%;
+            width: 102%;
             background-color: $silver;
+        }
+        &-date{
+            display: none;
+        }
+        &-venue{
+            display: none;
+        }
+        &-location{
+            display: none;
+        }
+        &-tablet__row{
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 1rem;
+        }
+        &-tablet__row__invi{
+            display: none;
+        }
+        &-tablet__row__venue{
+            transform: translateX(1rem);
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
+        }
+        &-exactDate{
+            width: 27%;
+        }
+        &-exactVenue{
+            width: 25%;
+        }
+        &-exactLocation{
+            width: 25%;
+        }
+        &-tablet__row__date{
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
+        }
+        &-tablet__row__location{
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
         }
     }
     @include desktop{
