--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -248,6 +248,7 @@ html, body {
     align-items: flex-start;
     position: relative;
     
+    
 
     @include mobile {
         &__title {
@@ -359,11 +360,31 @@ html, body {
         font-size: 3.75rem;
         line-height: 4.25rem;
         align-items: center;
+        width: 100%;
+
         &__title{
         margin: 0;
+        transform: translateY(20rem);
+        
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        font-weight: 700;
+            
         }
         &__subTitle{
-            padding-left: 10rem;
+            padding-left: 2.25rem; 
+            transform: translateY(20rem);      
+        }
+        &__container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &__music{
+            transform: translateX(15rem);    
+            padding: 0;  
+            width: 25%;
+
         }
     }
   
@@ -530,32 +551,94 @@ html, body {
         }
     }
     @include desktop{
+        padding: 2.25rem;
+        padding-top: 0;
+        padding-right: 8rem;
+
         &-title{
-            font-size: 60px;
-            padding-left: 5rem;
+            font-size: 2.25rem;
+            line-height: 2.75rem;
+            font-weight: 700;
+            margin: 0;
+            padding-bottom: 2.25rem;
+            padding-top: 3rem;
         }
-        &-container{
+       &-container{
+           display: flex;
+           justify-content: space-evenly;
+        }
+        &-containerDate{
             display: flex;
-            justify-content: space-evenly;
-            padding-left: 15rem;
-         }
-         &-containerDate{
-             display: flex;
-             justify-content: space-evenly;
-             align-items: flex-end;
-             margin: 0 auto;
-             transform: translateX(-6rem);
-             display: none;
-         }
-         &-btn{
-             width: 20%;
-             font-weight: bold;
-         }
-         &-lines {
-             width: 70%;
-             margin-left: 25rem;
-             background-color: $silver;
-         }
+            margin: 0 auto;
+            align-items: baseline;
+            flex-direction: row;
+            padding-top: 0.5rem;
+
+            justify-content: flex-end;
+            
+        }
+        &-btn{
+            width: 9.375rem;
+            font-weight: bold;
+            height: 2.5rem;
+        }
+        &-lines {
+            width: 78%;
+            background-color: $silver;
+            transform: translateX(18rem);
+        }
+        &-date{
+            display: none;
+        }
+        &-venue{
+            display: none;
+        }
+        &-location{
+            display: none;
+        }
+        &-tablet__row{
+            display: flex;
+            padding-bottom: 1rem;
+
+            justify-content: flex-end;
+
+        }
+        &-tablet__row__invi{
+            display: none;
+        }
+        &-tablet__row__venue{
+            transform: translateX(1rem);
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
+            width: 21.5%;
+        }
+        &-exactDate{
+            width: 25%;
+        }
+        &-exactVenue{
+            width: 20%;
+        }
+        &-exactLocation{
+            width: 15%;
+        }
+        &-tablet__row__date{
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
+
+            width: 23.5%;
+        }
+        &-tablet__row__location{
+            color: #AFAFAF;
+            font-size: 0.8125rem;
+            line-height: 1.375rem;
+            font-weight: 400;
+
+            width: 28.5%;
+        }
     }
 }
 
