--- a/styles/shows.css
+++ b/styles/shows.css
@@ -278,14 +278,14 @@ html, body {
     display: block;
   }
   .hero__img {
-    width: 100%;
-    height: auto;
+    height: 31.890625rem;
     display: block;
+    width: 100%;
   }
   .hero__title {
     padding-left: 2.25rem;
     margin: 0;
-    transform: translateY(8rem);
+    transform: translateY(2rem);
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
@@ -300,11 +300,12 @@ html, body {
   }
   .hero__soundcloud {
     border: none;
-    transform: translateY(-5rem);
+    transform: translateY(-2rem);
   }
   .hero__subTitle {
     padding-left: 2.25rem;
-    transform: translateY(8rem);
+    padding-top: 3rem;
+    padding-bottom: 2.25rem;
     margin: 0;
     font-size: 1.5rem;
     line-height: 2rem;
@@ -327,7 +328,7 @@ html, body {
   }
   .hero__subTitle {
     padding-left: 2.25rem;
-    transform: translateY(20rem);
+    transform: translateY(17rem);
   }
   .hero__container {
     display: flex;
@@ -335,9 +336,19 @@ html, body {
     align-items: center;
   }
   .hero__music {
-    transform: translateX(15rem);
+    transform: translateY(7rem);
     padding: 0;
-    width: 25%;
+    width: 30%;
+    padding-left: 25rem;
+  }
+  .hero__img {
+    height: 53.125rem;
+    display: block;
+    width: 100%;
+  }
+  .hero__soundcloud {
+    border: none;
+    transform: translateY(-5.5rem);
   }
 }
 
