--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -312,17 +312,16 @@ html, body {
         display: block;
     
 
-        &__img {
-            width: 100%;
-            height: auto;
+        &__img{
+            height: 31.890625rem;
             display: block;
-
+            width: 100%;
         }
 
         &__title{
         padding-left: 2.25rem;
         margin: 0;
-        transform: translateY(8rem);
+        transform: translateY(2rem);
        
         
         
@@ -343,11 +342,13 @@ html, body {
         &__soundcloud{
             
             border: none;
-            transform: translateY(-5rem);
+            transform: translateY(-2rem);
         }
         &__subTitle{
             padding-left: 2.25rem;
-            transform: translateY(8rem);
+            padding-top: 3rem;
+            padding-bottom: 2.25rem;
+
             margin: 0;
 
             font-size: 1.5rem;
@@ -373,7 +374,7 @@ html, body {
         }
         &__subTitle{
             padding-left: 2.25rem; 
-            transform: translateY(20rem);      
+            transform: translateY(17rem);      
         }
         &__container{
             display: flex;
@@ -381,11 +382,23 @@ html, body {
             align-items: center;
         }
         &__music{
-            transform: translateX(15rem);    
+            transform: translateY(7rem);    
             padding: 0;  
-            width: 25%;
+            width: 30%;
+            padding-left: 25rem;
 
         }
+        &__img{
+            height: 53.125rem;
+            display: block;
+            width: 100%;
+        }
+        &__soundcloud{
+            
+            border: none;
+            transform: translateY(-5.5rem);
+        }
+       
     }
   
    
